--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 .env
 /.vscode
-app/node_modules
-app/public/hot
-app/public/storage
-app/storage/*.key
-app/vendor
-app/.env
-app/.env.backup
-app/.phpunit.result.cache
-app/docker-compose.override.yml
-app/Homestead.json
-app/Homestead.yaml
-app/npm-debug.log
-app/yarn-error.log
-app/.idea
+application/node_modules
+application/public/hot
+application/public/storage
+application/storage/*.key
+application/vendor
+application/.env
+application/.env.backup
+application/.phpunit.result.cache
+application/docker-compose.override.yml
+application/Homestead.json
+application/Homestead.yaml
+application/npm-debug.log
+application/yarn-error.log
+application/.idea
